tests/snapshots/run_wpt_conformance__litert_softplus_float32_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softplus.https.any.js",
    "softplus float32 5D tensor",
    "litert",
    "PASS",
)
