tests/snapshots/run_wpt_conformance__litert_softsign_float32_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softsign.https.any.js",
    "softsign float32 3D tensor",
    "litert",
    "PASS",
)
